学生成绩显示

--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -91,6 +91,9 @@
                         id="auto-id-1507098444831">
                         <a class="f-thide f-fc3" href="student-course-outline">教学大纲</a>
                     </li>
+                    <li class="u-greentab j-tabitem f-f0 " data-name="评分标准" data-type="2" data-id="1002347044">
+                        <a class="f-thide f-fc3" href="student-mark-rule">评分标准</a>
+                    </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="课件" data-type="3" data-id="1002347045"
                         id="auto-id-1507098444832">
                         <a class="f-thide f-fc3" href="student-courseware">课件</a>
