--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -121,7 +121,32 @@
                                     <div class="course-panel-wrapper">
                                         <div class="course-panel-body-wrapper">
                                             <!--course list-->
-                                            
+                                            <table style="width: 800px; font-size: 20px;">
+                                                <tr style="height: 30px;">
+                                                    <th>课程名</th>
+                                                    <th>授课老师</th>
+                                                    <th>平时成绩</th>
+                                                    <th>实验成绩</th>
+                                                    <th>考试成绩</th>
+                                                    <th>最终成绩</th>
+                                                </tr>
+                                                <tr style="height: 30px;" align="center">
+                                                    <td>机器学习</td>
+                                                    <td>黄晓涛</td>
+                                                    <td>-</td>
+                                                    <td>-</td>
+                                                    <td>-</td>
+                                                    <td>-</td>
+                                                </tr>
+                                                <tr style="height: 30px;" align="center">
+                                                    <td>机器学习</td>
+                                                    <td>黄晓涛</td>
+                                                    <td>90</td>
+                                                    <td>80</td>
+                                                    <td>88</td>
+                                                    <td>86</td>
+                                                </tr>
+                                            </table>
                                         </div>
                                         <div class="course-panel-foot-wrapper">
                                             <ul class="ux-pager z-hdn">
