学生成绩管理

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -88,9 +88,9 @@
                          width="230" height="130" alt="数据结构">
                 </div>
                 <ul id="j-courseTabList" class="tab u-tabul">
-                    <li class="u-greentab j-tabitem f-f0 first u-curtab" data-name="课程介绍" data-type="1"
+                    <li class="u-greentab j-tabitem f-f0 first u-curtab" data-name="课程介绍管理" data-type="1"
                         data-id="1002347043" id="auto-id-1507098444830">
-                        <a class="f-thide f-fc3" href="teacher-course-introduce">课程介绍</a>
+                        <a class="f-thide f-fc3" href="teacher-course-introduce">课程介绍管理</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="教学大纲管理" data-type="2" data-id="1002347044"
                         id="auto-id-1507098444831">
@@ -109,11 +109,14 @@
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
                         id="auto-id-1507098444833">
-                        <a class="f-thide f-fc3" href="javascript:;">测验与作业</a>
+                        <a class="f-thide f-fc3" href="javascript:;">作业管理</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="考试" data-type="6" data-id="1002347047"
                         id="auto-id-1507098444834">
-                        <a class="f-thide f-fc3" href="javascript:;">考试</a>
+                        <a class="f-thide f-fc3" href="javascript:;">考试管理</a>
+                    </li>
+                    <li class="u-greentab j-tabitem f-f0 " data-name="学生成绩管理" data-type="6" data-id="1002347047">
+                        <a class="f-thide f-fc3" href="teacher-grade-manager">学生成绩管理</a>
                     </li>
                     
                 </ul>
