--- a/src/main/webapp/html/teacher-mark-rule.html
+++ b/src/main/webapp/html/teacher-mark-rule.html
@@ -27,7 +27,7 @@
         <div class="t-mark">
             实验成绩&nbsp;&nbsp;=&nbsp;&nbsp;实验报告&nbsp;<input type="text" class="form-control exp-report" style="width: 50px;display: inline">%+实验结果&nbsp;<input type="text" class="form-control exp-result" style="width: 50px;display: inline">%
         </div>
-        <button class="btn btn-primary" onclick="submit()">保存</button>
+        <button class="u-btn u-btn-primary" onclick="submit()">保存</button>
     </div>
 </div>
 </body>
