home页面样式完善

--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -269,5 +269,15 @@
 		// 默认载入
 		pageTrigger();
 	}
+    $(".info").hover(function(){
+        $(".sets").css("display","block");
+    },function(){
+        $(".sets").css("display","none");
+    })
+    $(".u-ui-img").hover(function(){
+        $(".e-hover-code").css("display","block");
+    },function(){
+        $(".e-hover-code").css("display","none");
+    })
 </script>
 </html>
