--- a/src/main/webapp/html/student-experiment.html
+++ b/src/main/webapp/html/student-experiment.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div></div>
+        <div style="position: absolute; bottom: 2px; right: 3px;"><a style="display: block;" onclick="showHelp()">帮助</a></div>
     </div>
 </div>
 </body>
