--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -12,8 +12,13 @@
 </head>
 <body>
 <div id="g-container">
+    <div id="g-nav-top">
+        <img src="../img/xiaohui.jpg">
+        <span>大数据基础教学平台</span>
+    </div>
+    <div id="g-background">
         <div class="login-box">
-            <span style="position: absolute;top: 30px;left:39px;font-size: 30px; font-family: 'Microsoft Sans Serif' , Arial, Helvetica, Verdana">大数据教学平台登录</span>
+            <span style="position: absolute;top: 30px;left:135px;font-size: 30px; font-family: 'Microsoft Sans Serif' , Arial, Helvetica, Verdana">登录</span>
             <div class="login-container">
                 <div id="user-account" class="user-info">
                     <img class="u-img" src="../img/ico-username.png">
@@ -34,10 +39,10 @@
                 </div>
             </div>
         </div>
-    <div id="g-nav-bottom" style="font-family: 'Microsoft Sans Serif' , Arial, Helvetica, Verdana">
-        <span style="position: absolute; height: 20px; font-size: 16px;margin-top: -15px; top: 50%; left: 100px;">华中科技大学网络中心大数据课题组</span>
-        <span style="position: absolute; height: 20px; font-size: 16px;margin-top: -15px; top: 50%; right: 50px;">© 2006-2017　华中科技大学注册中心</span>
-
+    </div>
+    <div id="g-nav-bottom">
+        <span style="position: absolute; height: 20px; font-size: 16px;margin-top: -10px; top: 50%; left: 100px;">华中科技大学网络与计算中心大数据课题组</span>
+        <span style="position: absolute; height: 20px; font-size: 16px;margin-top: -10px; top: 50%; right: 50px;">© 2006-2017　华中科技大学网络与计算中心</span>
     </div>
 </div>
 </body>
