--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>个人中心--学生</title>
-    <link rel="stylesheet" href="../css/font-awesome-ie7.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://mc.stu.126.net/pub/s/web/pt_home.css?16e6e3fc07c8ec874178a9562aca6ce3">
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/student-home.css">
-    
-    <script type="text/javascript" src="../js/jquery.js"></script>    
+    <script type="text/javascript" src="../js/jquery.js"></script>
    
    </head>
 <body>
@@ -17,7 +17,10 @@
             <div class="u-navLogin-container">
                 <div class="u-navLogin-logo">
                     <a href="#">
-                        <img src="../img/logo.png" width="190px" height="28px">
+                        <img src="../img/logo2.png" height="40px" style="margin-top: -6px;">
+                    </a>
+                    <a href="#">
+                        <img src="../img/logo.png" height="28px">
                     </a>
                 </div>
                 <div class="u-navLogin-loginBox">
@@ -67,7 +70,7 @@
                             </div>
                         </div>
                         <div class="u-search-icon">
-                            <span class="u-icon-search2 j-searchBtn" id="auto-id-1506681742568">
+                            <span class="u-icon-search2 j-searchBtn">
                             </span>
                         </div>
                     </div>
@@ -121,8 +124,8 @@
                                     <div class="course-panel-wrapper">
                                         <div class="course-panel-body-wrapper">
                                             <!--course list-->
-                                            <table style="width: 800px; font-size: 20px;">
-                                                <tr style="height: 30px;">
+                                            <table class="stu-grade">
+                                                <tr>
                                                     <th>课程名</th>
                                                     <th>授课老师</th>
                                                     <th>平时成绩</th>
@@ -130,7 +133,7 @@
                                                     <th>考试成绩</th>
                                                     <th>最终成绩</th>
                                                 </tr>
-                                                <tr style="height: 30px;" align="center">
+                                                <tr>
                                                     <td>机器学习</td>
                                                     <td>黄晓涛</td>
                                                     <td>-</td>
@@ -138,7 +141,7 @@
                                                     <td>-</td>
                                                     <td>-</td>
                                                 </tr>
-                                                <tr style="height: 30px;" align="center">
+                                                <tr>
                                                     <td>机器学习</td>
                                                     <td>黄晓涛</td>
                                                     <td>90</td>
