--- a/src/main/webapp/html/teacher-home.html
+++ b/src/main/webapp/html/teacher-home.html
@@ -18,6 +18,9 @@
             <div class="u-navLogin-container">
                 <div class="u-navLogin-logo">
                     <a href="#">
+                        <img src="../img/logo2.png" height="40px" style="margin-top: -6px;">
+                    </a>
+                    <a href="#">
                         <img src="../img/logo.png" width="190px" height="28px">
                     </a>
                 </div>
