--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -171,7 +171,16 @@
             </div>
         </div>
     </div>
-    <div id="j-footer" class="m-foot"></div>
+    <div id="j-footer" class="m-foot">
+        <div class="footbox">
+            <div class="ftsmlogo"></div>
+            <div class="ftline"></div>
+            <div class="footsb_txt">
+                ©2017 网络与计算中心计算机大数据课题组  湖北省武汉市洪山区珞喻路1037号 邮政编码：430074<br>
+                电话：027-87543341  信箱：tbccsupport@hust.edu.cn
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 <script type="text/javascript" src="../js/jquery-2.2.0.min.js"></script>
