--- a/src/main/webapp/html/student-experiment.html
+++ b/src/main/webapp/html/student-experiment.html
@@ -21,10 +21,10 @@
         
     </div>
 </div>
-<div class="m-mask">
+<div class="m-mask" style="display: none;">
     <div class="m-container require-info" style="width: 400px;height: 230px; margin: -115px -220px;border-radius: 15px;">
         <div class="f-pr" style="width: 300px;height: 140px; margin-left: -150px;top:35px;left: 50%;border:solid 1px #69B1F8; border-radius: 15px;">
-            <span style="width: 290px;height: 130px;margin: 5px 0 5px 5px;font-size: 15px;display: block;overflow-y: scroll">这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求这是一份实验要求，这是一份实验要求</span>
+            <span class="submit-demand" style="width: 290px;height: 130px;margin: 5px 0 5px 5px;font-size: 15px;display: block;overflow-y: scroll">这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求这是一份实验要求，这是一份实验要求</span>
         </div>
         <button class="u-btn u-btn-primary" style="position: absolute;bottom:0;left: 50%;margin-left: -40px;" onclick="iKnow()">我知道了</button>
     </div>
@@ -56,6 +56,7 @@
 <script type="text/javascript" src="../js/tools.js"></script>
 <script type="text/javascript" src="../js/student-experiment.js"></script>
 <script type="text/javascript">
+	
 	showExperiments();
 </script>
 </html>
