--- a/src/main/webapp/html/student-experiment.html
+++ b/src/main/webapp/html/student-experiment.html
@@ -37,8 +37,8 @@
                 <button class="u-btn u-btn-primary" style="position: relative;top:80px; left: 70px; width: 100px;" onclick="openFile(this)">上传实验报告</button>
                 <input type="file" class="submit-exp-report" style="position: absolute;width: 0px;height: 0px;opacity: 0;">
                 <div style="position: relative;left:250px;width: 270px;height: 120px;border: solid 1px;">
-                    <span class="content content-ok">这是一个已经上传好的文件</span>
-                    <span class="content">这是一个正在上传的文件</span>
+                    <!-- <span class="content content-ok">这是一个已经上传好的文件</span>
+                    <span class="content">这是一个正在上传的文件</span> -->
                 </div>
             </div>
             <div style="position: absolute;bottom:0;left:0;">
