完成学生成绩页面的显示

--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -104,12 +104,12 @@
                     <div id="j-module-tab" class="module-tab">
                         <div class="u-selectTab-container">
                             <div class="u-st-tag current ga-click" style="left: 0px;" data-action="课程tag点击">
-                                <a href="javascript:;" target="_top">
+                                <a href="javascript:;" target="_top" onclick="courseClick(this)">
                                     <span class="courses_number">课程</span>
                                 </a>
                             </div>
                             <div class="u-st-tag ga-click" style="left: 100px;" data-action="讨论tag点击">
-                                <a href="#" target="_top" >
+                                <a href="javascript:;" target="_top" onclick="gradeClick(this)">
                                     <span>成绩</span>
                                 </a>
                             </div>
