完成实验管理页面部分功能

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="../js/bootstrap.js"></script>
 	<script type="text/javascript" src="../js/course.js"></script>
     <script type="text/javascript" src="../js/tools.js"></script>
+    <script type="text/javascript" src="../js/dateformat.js"></script>
 </head>
 <body>
 <div id="g-container">
