--- a/src/main/webapp/html/teacher-experiment.html
+++ b/src/main/webapp/html/teacher-experiment.html
@@ -13,7 +13,7 @@
         <h2 class="j-moduleName">实验管理<br></h2>
     </div>
     <div class="m-learnChapterNormal f-pr">
-        <div>
+  <!--       <div>
             <div class="titleBox j-titleBox f-cb" onclick="titleClick(this)">
                 <div class="f-icon cpicon j-down f-fl u-icon-caret-up" style=""></div>
                 <div class="f-icon cpicon j-up f-fl u-icon-caret-down" style="display: none;"></div>
@@ -87,14 +87,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
         <div class="f-icon lesson-title-plus" style="width: 70px;height: 70px;" onclick="addTitle(this)">
         <span class="u-icon-plus"
               style=" font-size: 60px;margin: -30px -30px; position: absolute; top:50%; left:50%"></span>
-        </div>
-    </div>
+        </div>   --> 
+    </div>  
 </div>
 </body>
 <script type="text/javascript" src="../js/jedate.js"></script>
 <script type="text/javascript" src="../js/teacher-experiment.js"></script>
+<script type="text/javascript">
+showExperiment();
+</script>
 </html>
