修复学生课程等页面显示bug

--- a/src/main/webapp/html/course-introduce.html
+++ b/src/main/webapp/html/course-introduce.html
@@ -53,7 +53,7 @@
 	function getCourseById(courseId) {
 		$.ajax({
 			type : "POST",
-			url : "/studentcourse/getCourseById",
+			url : "/course/getCourseById",
 			dataType : "json",
 			data : {
 				courseId : courseId
