--- a/src/main/webapp/html/teacher-grade-manager.html
+++ b/src/main/webapp/html/teacher-grade-manager.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="../css/bootstrap.css">
     <script type="text/javascript" src="../js/teacher-grade-manager.js"></script>
+     <script type="text/javascript" src="../js/tools.js"></script>
     <style>
         table{
             width: 100%; font-size: 20px;
