--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -122,6 +122,9 @@
                     <li class="u-greentab j-tabitem f-f0 " data-name="学生成绩管理" data-type="6" data-id="1002347047">
                         <a class="f-thide f-fc3" href="teacher-grade-manager">学生成绩管理</a>
                     </li>
+                    <li class="u-greentab j-tabitem f-f0 " data-name="学生名单管理" data-type="6" data-id="1002347047">
+                        <a class="f-thide f-fc3" href="teacher-student-manager">学生名单管理</a>
+                    </li>
                     
                 </ul>
             </div>
