--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -96,6 +96,9 @@
                  -->
                  <div class="u-ui-f2f"><span><span>学院</span>:<span id="f-name">学院名</span></span>
                 </div>
+                <div style="float: right;">
+                    <img src="../img/xuewuzhijing.png">
+                </div>
             </div>
         </div>
         <div id="j-home-content" class="home-content">
