完成学生课件视频页面，完成教师页面的图片显示

--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -87,7 +87,7 @@
         <div class="g-sd1">
             <div class="m-learnleft">
                 <div class="top f-pr">
-                    <img class="course_photo" id=""
+                    <img class="course-image" id=""
                          src="../img/bgi1.jpg"
                          width="230" height="130" alt="数据结构">
                 </div>
@@ -142,6 +142,7 @@
 </body>
 
 <script type="application/javascript">
+showCoursePhoto();
 	bootstrapButton = $.fn.button.noConflict();
 	$.fn.bootstrapBtn = bootstrapButton;
 	function baseAjax(item) {
