--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -97,7 +97,7 @@
                  <div class="u-ui-f2f"><span><span>学院</span>:<span id="f-name">学院名</span></span>
                 </div>
                 <div style="float: right;">
-                    <img src="../img/xuewuzhijing.png">
+                    <img height="180px" style="margin-top: 20px;" src="../img/xhwykzz.png">
                 </div>
             </div>
         </div>
