--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -107,7 +107,7 @@
                     </li>
                  	<li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
                         id="auto-id-1507098444833">
-                        <a class="f-thide f-fc3" href="#">测验与作业</a>
+                        <a class="f-thide f-fc3" href="student-homework">测验与作业</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="考试" data-type="6" data-id="1002347047"
                         id="auto-id-1507098444834">
