更新实验报告互评页面

--- a/src/main/webapp/html/student-experiment.html
+++ b/src/main/webapp/html/student-experiment.html
@@ -24,7 +24,7 @@
 <div class="m-mask" style="display: none;">
     <div class="m-container require-info" style="width: 800px;height: 460px; margin: -230px -400px;border-radius: 15px;">
         <div class="f-pr" style="width: 680px;height: 340px; margin-left: -340px;top:50px;left: 50%;border:solid 1px #69B1F8; border-radius: 15px;">
-            <span class="submit-demand" style="width: 670px;height: 330px;margin: 5px 0 5px 5px;font-size: 15px;display: block;overflow-y: scroll">这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求这是一份实验要求，这是一份实验要求</span>
+            <div class="submit-demand" style="width: 670px;height: 330px;margin: 5px 0 5px 5px;font-size: 15px;display: block;overflow-y: scroll">这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求，这是一份实验要求这是一份实验要求，这是一份实验要求</div>
         </div>
         <button class="u-btn u-btn-primary" style="position: absolute;bottom:0;left: 50%;margin-left: -40px;" onclick="iKnow()">我知道了</button>
     </div>
