修复学生课件页面显示bug

--- a/src/main/webapp/html/student-mark-rule.html
+++ b/src/main/webapp/html/student-mark-rule.html
@@ -32,7 +32,7 @@
             平时成绩&nbsp;&nbsp;=&nbsp;&nbsp;考勤&nbsp;<input type="text" disabled class="check-grade">%+平时作业&nbsp;<input type="text" disabled class="regular-work" >%
         </div>
         <div class="t-mark">
-            实验成绩&nbsp;&nbsp;=&nbsp;&nbsp;实验报告&nbsp;<input type="text" disabled class="form-control exp-report">%+实验结果&nbsp;<input type="text" disabled class="exp-result" >%
+            实验成绩&nbsp;&nbsp;=&nbsp;&nbsp;实验报告&nbsp;<input type="text" disabled class="exp-report">%+实验结果&nbsp;<input type="text" disabled class="exp-result" >%
         </div>
     </div>
 </div>
