完成 导出成绩 发布成绩

--- a/src/main/webapp/html/teacher-grade-manager.html
+++ b/src/main/webapp/html/teacher-grade-manager.html
@@ -35,7 +35,8 @@
                 <option value="3">总成绩</option>
             </select>
             <button class="u-btn u-btn-primary f-pr f-fl" style="margin: 0 10px;width: 120px;" onclick="importFile()">导入考勤成绩</button>
-            <button class="u-btn u-btn-primary f-pr f-fl" style="margin: 0 10px;width: 120px;">导出学生成绩</button>
+             <button class="u-btn u-btn-primary f-pr f-fl" style="margin: 0 10px;width: 120px;" onclick="publish()">发布学生成绩</button>
+            <button class="u-btn u-btn-primary f-pr f-fl" style="margin: 0 10px;width: 120px;" onclick="download()">导出学生成绩</button>
         </div>
         <div class="grade-body" style="width: 100%">
 
