完成实验报告互评

--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -97,7 +97,7 @@
                  <div class="u-ui-f2f"><span><span>学院</span>:<span id="f-name">学院名</span></span>
                 </div>
                 <div style="float: right;">
-                    <img height="180px" style="margin-top: 20px;" src="../img/xhwykzz.png">
+                    <img height="180px" style="margin-top: 20px;" src="../img/xuewuzhijing.png">
                 </div>
             </div>
         </div>
@@ -199,6 +199,7 @@
         $(".e-hover-code").css("display","none");
     })
 </script>
- <script type="text/javascript" src="../js/student.js"></script>
  <script type="text/javascript" src="../js/tools.js"></script>
+ <script type="text/javascript" src="../js/student.js"></script>
+ 
 </html>
