修改默认头像

--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -30,16 +30,13 @@
                                 <div class="info">
                                     <div class="face">
                                         <a href="#" targe="_self">
-                                            <img id="my-img" src="../img/my-img.png" width="30" height="30" alt="用户名">
+                                            <img id="my-img" src="../img/stu-img.png" width="30" height="30" alt="用户名">
                                         </a>
                                     </div>
                                     <div class="j-nav-set sets" style="display: none">
                                         <div class="e-hover-arrow"></div>
                                         <div class="e-hover-arrow-border"></div>
-                                        <ul class="set">
-                                            <li>
-                                                <a class="a" href="#" target="_blank">设置</a>
-                                            </li>
+                                        <ul class="set">                                            
                                             <li class="exit">
                                                 <a href="javascript:studentLogout();">退出</a>
                                             </li>
@@ -86,9 +83,7 @@
                     <a>
                         <img width="96" height="96" src="http://edu-image.nosdn.127.net/49E89BEA3F1B3F1AC788F5F94C4A457F.png?imageView&amp;thumbnail=96y96&amp;quality=100" alt="用户头像" class="user-head-img">
                     </a>
-                    <div class="e-hover-code">
-                        <a href="#">编辑头像</a>
-                    </div>
+                    
                 </div>
                 <div class="u-ui-name"><span class="user-name" id="stu-name">学生姓名</span></div>
                 <div class="u-ui-tag "><span id="stu-id">学号</span></div>
