--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -28,16 +28,13 @@
                                 <div class="info">
                                     <div class="face">
                                         <a href="#" targe="_self">
-                                            <img id="my-img" src="../img/my-img.png" width="30" height="30" alt="用户名">
+                                            <img id="my-img" src="../img/stu-img.png" width="30" height="30" alt="用户名">
                                         </a>
                                     </div>
                                     <div class="j-nav-set sets" style="display: none">
                                         <div class="e-hover-arrow"></div>
                                         <div class="e-hover-arrow-border"></div>
-                                        <ul class="set">
-                                            <li>
-                                                <a class="a" href="#" target="_blank">设置</a>
-                                            </li>
+                                        <ul class="set">                                            
                                             <li class="exit">
                                                 <a href="#">退出</a>
                                             </li>
