--- a/src/main/webapp/html/student-question1.html
+++ b/src/main/webapp/html/student-question1.html
@@ -8,15 +8,13 @@
 <body>
 <div class="m-learnChapterList">
     <div class="j-moduletitle u-learn-moduletitle f-cb" style="">
-        <h2 class="j-moduleName">这是一份测试作业题的名字<br></h2>
+        <h2 class="j-moduleName">大数据基础测试<br></h2>
     </div>
     <div class="m-learnChapterNormal f-pr" style="width: 65%">
         <div class="title">
         <div class="position f-fl">1</div>
         <div class="qaDescription">
-            <span style="display: block;margin-left: 38px;">这是一个很长很长很长很长很长很长很长很长很长很长很长的题目<br>
-            这是题目的具体具体具体具体具体内容<br>
-                这是题目的具体具体具体内容<br>
+            <span style="display: block;margin-left: 38px;">下列哪一项不是大数据提供的用户交互方式：（）
             </span>
         </div>
         </div>
@@ -25,22 +23,88 @@
                 <li onclick="choice(this)">
                     <input type="radio" name="qa1" value="a">
                     <h3>A.</h3>
-                    <label>这是选项A</label>
+                    <label>统计分析和数据挖掘</label>
                 </li>
                 <li onclick="choice(this)">
                     <input type="radio" name="qa1" value="b">
                     <h3>B.</h3>
-                    <label>A 这是选项A</label>
+                    <label>任意查询和分析</label>
                 </li>
                 <li onclick="choice(this)">
                     <input type="radio" name="qa1" value="c">
                     <h3>C.</h3>
-                    <label>这是选项A</label>
+                    <label>图形化展示</label>
                 </li>
                 <li onclick="choice(this)">
                     <input type="radio" name="qa1" value="d">
                     <h3>D.</h3>
-                    <label>这是选项A</label>
+                    <label>企业报表</label>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="m-learnChapterNormal f-pr" style="width: 65%">
+        <div class="title">
+            <div class="position f-fl">2</div>
+            <div class="qaDescription">
+            <span style="display: block;margin-left: 38px;">与大数据密切相关的技术是：（）
+            </span>
+            </div>
+        </div>
+        <div class="choiceBox">
+            <ul>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa2" value="a">
+                    <h3>A.</h3>
+                    <label>蓝牙</label>
+                </li>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa2" value="b">
+                    <h3>B.</h3>
+                    <label>云计算</label>
+                </li>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa2" value="c">
+                    <h3>C.</h3>
+                    <label>博弈论</label>
+                </li>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa2" value="d">
+                    <h3>D.</h3>
+                    <label>wifi</label>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="m-learnChapterNormal f-pr" style="width: 65%">
+        <div class="title">
+            <div class="position f-fl">3</div>
+            <div class="qaDescription">
+            <span style="display: block;margin-left: 38px;">大数据应用需依托的新技术有：（）
+            </span>
+            </div>
+        </div>
+        <div class="choiceBox">
+            <ul>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa3" value="a">
+                    <h3>A.</h3>
+                    <label>大规模存储与计算</label>
+                </li>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa3" value="b">
+                    <h3>B.</h3>
+                    <label>数据分析处理 </label>
+                </li>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa3" value="c">
+                    <h3>C.</h3>
+                    <label>智能化</label>
+                </li>
+                <li onclick="choice(this)">
+                    <input type="radio" name="qa3" value="d">
+                    <h3>D.</h3>
+                    <label>三个选项都是</label>
                 </li>
             </ul>
         </div>
