修改一些不美丽的bug

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>大数据教学平台</title>
+    <title>大数据基础教学实验平台</title>
     <link rel="stylesheet" href="../css/head.css">
     <link rel="stylesheet" href="../css/login.css">
     <script type="text/javascript" src="../js/jquery.js"></script>
@@ -14,7 +14,7 @@
 <div id="g-container">
     <div id="g-nav-top">
         <img src="../img/xiaohui.jpg">
-        <span>大数据基础教学平台</span>
+        <span>大数据基础教学实验平台</span>
     </div>
     <div id="g-background">
         <div class="login-box">
