--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>个人中心--学生</title>
+    <title>大数据基础教学实验平台-个人中心</title>
     <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="http://mc.stu.126.net/pub/s/web/pt_home.css?16e6e3fc07c8ec874178a9562aca6ce3">
     <link rel="stylesheet" href="../css/head.css">
