修改项目名，和教师页面的背景图

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -14,7 +14,7 @@
 <div id="g-container">
     <div id="g-nav-top">
         <img src="../img/xiaohui.jpg">
-        <span>大数据基础教学平台</span>
+        <span>大数据基础教学实验自动评判平台</span>
     </div>
     <div id="g-background">
         <div class="login-box">
