--- a/src/main/webapp/html/teacher-home.html
+++ b/src/main/webapp/html/teacher-home.html
@@ -21,7 +21,7 @@
                         <img src="../img/logo2.png" height="40px" style="margin-top: -6px;">
                     </a>
                     <a href="#">
-                        <img src="../img/logo.png" width="190px" height="28px">
+                        <img src="../img/logo.png" width="400px" height="28px">
                     </a>
                 </div>
                 <div class="u-navLogin-loginBox">
@@ -93,6 +93,9 @@
                 </div>
                 <div class="u-ui-name" style="top:48px"><span class="user-name" id="teacher-name"></span></div>
                 <div class="u-ui-f2f" style="top:92px"><span><span>电话</span> : <span id="telephone"></span></span>
+                </div>
+                <div style="float: right;">
+                    <img height="180px" style="margin-top: 20px;" src="../img/xuewuzhijing.png">
                 </div>
             </div>
         </div>
