修改项目名

--- a/src/main/webapp/html/student-home.html
+++ b/src/main/webapp/html/student-home.html
@@ -20,7 +20,7 @@
                         <img src="../img/logo2.png" height="40px" style="margin-top: -6px;">
                     </a>
                     <a href="#">
-                        <img src="../img/logo.png" height="28px">
+                        <img src="../img/logo.png" width="400px" height="28px">
                     </a>
                 </div>
                 <div class="u-navLogin-loginBox">
